After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771148 - power: Fix hiding wi-fi, mobile broadband toggles
power: Fix hiding wi-fi, mobile broadband toggles
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Power
3.20.x
Other All
: Normal normal
: ---
Assigned To: Richard Hughes
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-10 02:42 UTC by Michael Catanzaro
Modified: 2016-09-15 18:27 UTC
See Also:
GNOME target: ---
GNOME version: 3.19/3.20


Attachments
power: Fix hiding wi-fi, mobile broadband toggles (1.69 KB, patch)
2016-09-10 02:42 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2016-09-10 02:42:21 UTC
This is broken in gnome-3-20 (but fixed differently in master)
Comment 1 Michael Catanzaro 2016-09-10 02:42:29 UTC
Created attachment 335223 [details] [review]
power: Fix hiding wi-fi, mobile broadband toggles

We check with NetworkManager whether a wireless device exists to decide
whether or not to display these toggles. NetworkManager says no, we hide
the toggles, then we call gtk_widget_show_all() and undo our work. Sad!
Actually pressing the toggles triggers the check again, and causes both
listbox rows to shockingly disappear.

This fix is not needed on the master branch because, since the port to
libnm 1.2, the check is now scheduled on the main loop, to run after
this function completes, inadvertantly fixing this bug.
Comment 2 Bastien Nocera 2016-09-10 10:44:34 UTC
Review of attachment 335223 [details] [review]:

Sure.
Comment 3 Michael Catanzaro 2016-09-10 14:33:24 UTC
Attachment 335223 [details] pushed as 601164d - power: Fix hiding wi-fi, mobile broadband toggles