power: Fix hiding wi-fi, mobile broadband toggles

We check with NetworkManager whether a wireless device exists to decide
whether or not to display these toggles. NetworkManager says no, we hide
the toggles, then we call gtk_widget_show_all() and undo our work. Sad!
Actually pressing the toggles triggers the check again, and causes both
listbox rows to shockingly disappear.

This fix is not needed on the master branch because, since the port to
libnm 1.2, the check is now scheduled on the main loop, to run after
this function completes, inadvertantly fixing this bug.

https://bugzilla.gnome.org/show_bug.cgi?id=771148